added ability to draw polygon

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         Square: <span id="square"></span>
     </h1>
     <script src="javascript.js"></script>
+    <canvas id="canvas" width="800px" height="600px"></canvas>
 </body>
 </html>
