--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" src="style.css" />
 </head>
 <body>
     <h1>
@@ -12,7 +13,7 @@
     <h1>
         Square: <span id="square"></span>
     </h1>
-    <script src="javascript.js"></script>
     <canvas id="canvas" width="800px" height="600px"></canvas>
+    <script src="javascript.js"></script>
 </body>
 </html>
